WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185354
DFG CFA phase should only do clobber asserts in debug
https://bugs.webkit.org/show_bug.cgi?id=185354
Summary
DFG CFA phase should only do clobber asserts in debug
Filip Pizlo
Reported
2018-05-05 10:50:48 PDT
It turns out that they are quite expensive.
Attachments
the patch
(1.53 KB, patch)
2018-05-05 10:52 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2018-05-05 10:52:00 PDT
Created
attachment 339649
[details]
the patch
Filip Pizlo
Comment 2
2018-05-05 18:06:23 PDT
Landed in
https://trac.webkit.org/changeset/231399/webkit
Radar WebKit Bug Importer
Comment 3
2018-05-08 15:33:39 PDT
<
rdar://problem/40074156
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug