DFG CFA phase should only do clobber asserts in debug https://bugs.webkit.org/show_bug.cgi?id=185354

Reviewed by Saam Barati.

Clobber asserts are responsible for 1% of compile time. That's too much. This disables them
unless asserts are enabled.

* dfg/DFGCFAPhase.cpp:
(JSC::DFG::CFAPhase::performBlockCFA):



Canonical link: https://commits.webkit.org/200832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231399 268f45cc-cd09-0410-ab3c-d52691b4dbfc