Source/JavaScriptCore/dfg/DFGCFAPhase.cpp
@@ -181,7 +181,8 @@ private:
                 break;
             }
             
-            if (m_state.didClobberOrFolded() != writesOverlap(m_graph, node, JSCell_structureID))
+            if (!ASSERT_DISABLED
+                && m_state.didClobberOrFolded() != writesOverlap(m_graph, node, JSCell_structureID))
                 DFG_CRASH(m_graph, node, toCString("AI-clobberize disagreement; AI says ", m_state.clobberState(), " while clobberize says ", writeSet(m_graph, node)).data());
         }
         if (m_verbose) {
